act, aun no funciona :(

--- a/src/app/pages/m-datos/m-datos.page.html
+++ b/src/app/pages/m-datos/m-datos.page.html
@@ -24,7 +24,7 @@
 
 <ion-content class="fondo" [fullscreen]="true">
   <ion-avatar class="circle">
-    <img [src]="bd.imageData" />
+    <img [src]="image" />
   </ion-avatar>
   <ion-button (click)="takePicture()" class="edit"><ion-icon name="create-outline"></ion-icon></ion-button>
   <br><br>
