--- a/src/app/pages/inicio/correo/correo.page.html
+++ b/src/app/pages/inicio/correo/correo.page.html
@@ -9,10 +9,10 @@
             <p>ingrese su correo electrónico y mas adelante se le entregaran mas instrucciones</p>
             <!-- EMAIL -->
             <ion-input label="Email:" type="text" label-placement="floating" fill="outline"
-              placeholder="correo@example.com" name="email">
+              placeholder="correo@example.com" name="email" [(ngModel)]="correo">
             </ion-input>
             <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
-              [routerLink]="['/recuperar-clave']">ir</ion-button>
+               (click)="validarCorreoEnBD()">ir</ion-button>
           </div>
         </ion-card-content>
       </ion-card>
