--- a/src/app/pages/Shop/historial/historial.page.html
+++ b/src/app/pages/Shop/historial/historial.page.html
@@ -3,13 +3,13 @@
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
       <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
+        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;" name="cart-outline"></ion-icon>
       </mat-icon>
     </div>
 
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
-      <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
+      <ion-menu-button style="color: #0D0D0D;"></ion-menu-button>
     </ion-buttons>
 
     <!-- EL BUSCADOR -->
@@ -18,24 +18,22 @@
     </div>
   </ion-toolbar>
 </ion-header>
-<!--################################################HISTORIAL DE VENTAS CON DETALLES########################################-->
 
 <ion-content class="ion-padding">
-  <div class="card-container">
-    <!-- Utiliza *ngFor para recorrer arregloProductosResultado y mostrar cada venta -->
-    <ion-card *ngFor="let venta of arregloProductosResultado" class="custom-card">
-      <!-- Muestra la foto del producto -->
-      <img [src]="venta.foto" alt="Foto del producto" class="product-image">
-      
-      <ion-card-content class="card-content">
-        <!-- Ajusta los campos según tu estructura de datos -->
-        <ion-card-title class="titulo">ID Venta: {{ venta.idVenta }}</ion-card-title>
-        <p class="subti">Cantidad: {{ venta.cantidadProducto }}</p>
-        <p class="subti">Total: ${{ venta.totalV }}</p>
-        <p class="subti">Subtotal: ${{ venta.subtotalD }}</p>
-        <p class="subti">Fecha: {{ venta.fechaV }}</p>
-      </ion-card-content>
-    </ion-card>
-  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="6" size-md="4" size-lg="3" *ngFor="let venta of arregloProductosResultado">
+        <ion-card class="custom-card">
+          <!-- Muestra la foto del producto -->
+          <ion-card-content class="card-content">
+            <!-- Ajusta los campos según tu estructura de datos -->
+            <ion-card-title class="titulo">ID Venta: {{ venta.idVenta }}</ion-card-title>
+            <p class="subti">Total: ${{ venta.totalV }}</p>
+            <p class="subti">Fecha: {{ venta.fechaV }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <app-componente2></app-componente2>
 </ion-content>
