foto del usuario lista

--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -23,7 +23,7 @@
 
 <ion-content class="fondo" [fullscreen]="true">
   <ion-avatar class="circle">
-    <img  [src]="imageData" />
+    <img  [src]="fotoUEnviada" />
   </ion-avatar>
   <br><br><br>
   <ion-grid>
