--- a/src/app/pages/m-datos/m-datos.page.html
+++ b/src/app/pages/m-datos/m-datos.page.html
@@ -23,8 +23,8 @@
 <!--#############################################PRODUCTOS################################################-->
 
 <ion-content class="fondo" [fullscreen]="true">
-  <ion-avatar class="circle">
-    <img [src]="image" />
+  <ion-avatar class="circle" *ngIf="fotoUEnviada">
+    <img [src]="fotoUEnviada" />
   </ion-avatar>
   <ion-button (click)="takePicture()" class="edit"><ion-icon name="create-outline"></ion-icon></ion-button>
   <br><br>
