se ve el circulo en blanco de la foto

--- a/src/app/pages/m-datos/m-datos.page.html
+++ b/src/app/pages/m-datos/m-datos.page.html
@@ -23,7 +23,7 @@
 <!--#############################################PRODUCTOS################################################-->
 
 <ion-content class="fondo" [fullscreen]="true">
-  <ion-avatar class="circle" *ngIf="fotoUEnviada">
+  <ion-avatar class="circle" name="fotoUEnviada">
     <img [src]="fotoUEnviada" />
   </ion-avatar>
   <ion-button (click)="takePicture()" class="edit"><ion-icon name="create-outline"></ion-icon></ion-button>
