--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
@@ -81,3 +81,15 @@ ion-card {
   margin: 5px;
 
 }
+
+.user-circle {
+  text-align: center;
+  margin: 10px; /* Espacio alrededor del círculo */
+}
+
+.user-circle img {
+  width: 100px; /* Ajusta el tamaño según tus preferencias */
+  height: 100px; /* Ajusta el tamaño según tus preferencias */
+  border-radius: 50%;
+  border: 2px solid #ffffff; /* Puedes personalizar el color del borde */
+}
