--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
@@ -7,18 +7,21 @@
         <ion-card-content class="input-container">
           <ion-card-title>Recuperar Contraseña</ion-card-title>
           <form id="registration-form">
-            <ion-select label="Pregunta de seguridad:" label-placement="floating" fill="outline" [(ngModel)]="pregunta">
-              <ion-select-option value='¿Cuál es tu película favorita?'>¿Cuál es tu película favorita?</ion-select-option>
-              <ion-select-option value='¿Nombre de tu mascota?'>¿Nombre de tu mascota?</ion-select-option>
-              <ion-select-option value='¿Color favorito?'>¿Color favorito?</ion-select-option>
+
+            <!-- Pregunta de seguridad -->
+            <ion-select label="Pregunta de Seguridad" label-placement="floating" fill="outline"
+              [(ngModel)]="pregunta" required>
+              <ion-select-option *ngFor="let pregunta of arregloPreguntas" value="{{ pregunta.idPregunta }}">
+                {{pregunta.nombrePregunta }}</ion-select-option>
             </ion-select><br>
             
-            <ion-input label="Respuesta:" type="text" label-placement="floating" fill="outline" placeholder="Respuesta" [(ngModel)]="respuesta"></ion-input>
-            
+            <ion-input label="Respuesta:" type="text" label-placement="floating" fill="outline" placeholder="Respuesta"
+              [(ngModel)]="respuesta"></ion-input>
+
             <ion-button class="center-buttons" (click)="validarPregunta()">Validar Pregunta</ion-button>
 
             <ion-button class="center-buttons" (click)="validarRes()">Guardar contraseña</ion-button>
-            
+
             <!--NUEVA-->
             <ion-input label="Nueva contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="**************"></ion-input>
