--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.html
@@ -1,5 +1,3 @@
-<ion-header [translucent]="true">
-</ion-header>
 <ion-content class="fondo" [fullscreen]="true">
   <ion-grid>
     <ion-row class="center-row">
@@ -17,7 +15,7 @@
 
             <ion-input label="Respuesta:" type="text" label-placement="floating" fill="outline" placeholder="Respuesta"
               [(ngModel)]="respuesta"></ion-input>
-              
+
             <!--NUEVA-->
             <!-- CONTRASEÑA -->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
@@ -33,8 +31,9 @@
               (ionBlur)="verificarFormulario()">
             </ion-input>
             <!--BOTON-->
-            <ion-button (click)="insertarYValidarRes()" [routerLink]="['/inicio-sesion']"
-            [disabled]="!formularioValido">Cambiar la contraseña</ion-button>
+            <ion-button (click)="onSubmit()" [routerLink]="['/inicio-sesion']"
+              [disabled]="!formularioValido">Cambiar la contraseña</ion-button>
+
           </form>
         </ion-card-content>
       </ion-card>
