--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.scss
@@ -73,7 +73,7 @@ ion-card-title {
 
 /* Estilos para el fondo */
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
+  --background: url(https://img.freepik.com/fotos-premium/imagenes-colores-degradados-bandas-colores_975572-15291.jpg);
 }
 
 ion-card {
