--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -22,9 +22,9 @@
             <!-- VALIDACION -->
             <div class="error-message" *ngIf="errors.apellidoU">{{ errors.apellidoU }}</div>
             <!-- RUT -->
-            <ion-input label="RUT:(si es k presione 0 dos veces)" type="text" label-placement="floating" fill="outline" placeholder="11.111.111-1"
-              name="rut" required [(ngModel)]="rutValue" (ionBlur)="verificarFormulario()" (keydown)="valiRut($event)"
-              inputmode="decimal">
+            <ion-input label="RUT:(si es k presione 0 dos veces)" type="text" label-placement="floating" fill="outline"
+              placeholder="11.111.111-1" name="rut" required [(ngModel)]="rutValue" (ionBlur)="verificarFormulario()"
+              (keydown)="valiRut($event)" inputmode="decimal">
             </ion-input>
 
             <!-- VALIDACION -->
@@ -36,6 +36,9 @@
             </ion-input>
             <!-- VALIDACION EMAIL -->
             <div class="error-message" *ngIf="errors.email">{{ errors.email }}</div>
+
+
+
             <!-- CONTRASEÑA -->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="M1@password" name="password" required [(ngModel)]="passwordValue"
@@ -43,6 +46,8 @@
             </ion-input>
             <!-- VALIDACION CONTRASEÑA -->
             <div class="error-message" *ngIf="errors.password">{{ errors.password }}</div>
+
+
             <!-- CONFIRMAR CONTRASEÑA -->
             <ion-input label="Confirmar Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="Confirmar contraseña" name="confirmPassword" required [(ngModel)]="confirmPasswordValue"
