--- a/src/app/pages/Shop/tienda/tienda.page.scss
+++ b/src/app/pages/Shop/tienda/tienda.page.scss
@@ -8,7 +8,7 @@ ion-img {
 ion-card {
     box-shadow: 6px 2px 6px #79F2E6;
     background-color: #010626;
-    width: fit-content;
+    width: max-content;
     height: max-content;
 }
 
@@ -69,7 +69,7 @@ ion-card-title {
 
 /* Estilos para el fondo */
 ion-content {
-    --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
+    --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
 }
 
 /* Estilos para las pipes (tabla) */
