--- a/src/app/pages/admin/lista-usuario/lista-usuario.page.html
+++ b/src/app/pages/admin/lista-usuario/lista-usuario.page.html
@@ -21,19 +21,22 @@
 
 <ion-content [fullscreen]="true">
   <ion-card-title>TimeTecheros</ion-card-title>
-  <ion-button [routerLink]="['/nuevo-admin']">Agregar nuevo admin</ion-button>
-
+  <div class="center-button">
+    <ion-button [routerLink]="['/nuevo-admin']">Agregar nuevo admin</ion-button>
+  </div>
+  
   <ion-grid>
     <ion-row *ngIf="usuarios.length > 0">
       <ion-col size="12" size-md="6" size-lg="4" *ngFor="let usuario of usuarios">
-        <div class="user-circle">
-          <img [src]="usuario.fotoU" />
-        </div>
+        
         <ion-card>
-          <ion-card-content style="color: black; text-align: center;">
+          <div class="user-circle">
+            <img [src]="usuario.fotoU" />
+          </div>
+          <ion-card-content style="color: white; text-align: center;">
             {{ usuario.nombreU }} {{ usuario.apellidoU }} - {{ usuario.correoU }}
-            
-            <ion-button (click)="eliminarUsuario(usuario)">Eliminar usuario</ion-button>
+            <br>
+            <ion-button class="borrar" (click)="eliminarUsuario(usuario)">Eliminar usuario</ion-button>
           </ion-card-content>
         </ion-card>
         <br><br><br>
