--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -2,10 +2,9 @@
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
-      <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
-      </mat-icon>
+      <ion-icon style="width: 35px; height: 35px; color: #0D0D0D;" name="cart-outline" [routerLink]="['/carrito']"></ion-icon>
     </div>
+    
   
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
@@ -26,8 +25,7 @@
       <ion-card>
         <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
         <ion-row>
-          <ion-button class="center-buttons" shape="round" [routerLink]="['/lista-usuario']">Ver usuarios</ion-button>
-          <ion-button class="center-buttons" shape="round" [routerLink]="['/agregar-p-admin']">Agregar productos</ion-button>
+          <ion-button class="center-buttons"  [routerLink]="['/lista-usuario']">Ver usuarios</ion-button>
         </ion-row>
       </ion-card>
     </ion-row>
