cambios en cosas

--- a/src/app/components/componente2/componente2.component.scss
+++ b/src/app/components/componente2/componente2.component.scss
@@ -18,11 +18,11 @@
 
 ion-tab-button {
   font-size: 15px;
-  color: #0d0d0d;
+  color:#F3F2F0;
 }
 
 ion-tabs {
-  --ion-background-color: white;
+  --ion-background-color: #050025;
 }
 
 
