--- a/src/app/pages/inicio/modificar-clave/modificar-clave.page.scss
+++ b/src/app/pages/inicio/modificar-clave/modificar-clave.page.scss
@@ -1,144 +1,91 @@
 /*FONDO*/
 ion-content {
-  --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
+  --background: white;
+}
+
+/*botones*/
+.btn {
+  --background: #7CC9CF;
+}
+
+ion-button {
+  --background: #0C909C;
+  box-shadow: #000000;
+  border-radius: 16px;
+  justify-content: center;
+}
+
+ion-input {
+  font-size: 15px;
+  color: black;
+  font-family: 'Montserrat';
+
+  ion-input label {
+    font-weight: bold;
+  }
+}
+
+ion-card {
+  border-radius: 16px;
+  border: 3px solid #3D2652;
+  box-shadow: #3D2652;
+  width: 380px;
+  margin-top: 35px;
+}
+
+p {
+  font-size: 25px;
+  margin-left: 150px;
+  margin-top: -50px; 
+  font-family: 'Montserrat';
+  font-weight: bold;
+}
+
+.sin {
+  border: blue;
+  box-shadow: none;
+  height: 100px;
+  margin-left: 60px;
+  font-family: 'Montserrat';
+}
+
+/*titulos*/
+
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
+
+ion-card-title {
+  color: black;
+  text-align: center;
+  margin: 5px;
+  font-family: 'Montserrat';
+}
+
+//el avatar del usuario:
+ion-avatar {
+  width: 150px;
+  height: 150px;
+  border: 5px solid #0C909C;
+
+  ion-avatar img {
+    width: 150px;
+    height: 150px;
 
   }
-  
-  ion-img {
-    width: 300px;
-    height: 300px;
-  }
-  
-  ion-card {
-    box-shadow: 2px 2px 2px #79F2E6;
-    border-radius: 16px;
-    background-color: #010626;
-    height: 350px;
-    max-width: 460px;
-    margin: 120px auto; /* Esto centrará horizontalmente la tarjeta */
-  }
-  
-  /*titulos*/
-  
-  @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-  
-  p {
-    color: white;
-    font-size: 15px;
-    text-align: left;
-    font-family: 'ADLaM Display', cursive;
-  }
-  
+}
+.error-message {
+  color: red;
+  font-size: 14px;
+}
+
+/* Ajustes para dispositivos específicos */
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
   ion-card-title {
-    color: white;
-    font-size: 40px;
-    /* Ajusta el tamaño del título según tus preferencias */
-    margin: 5px;
-    text-align: center;
-    font-family: 'DM Serif Display', serif;
+    font-size: 30px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
   }
-  
+
   .ion-title {
-    color: white;
-    font-family: 'DM Serif Display', serif;
-    font-size: 25px;
-    text-align: center;
-    margin: 5px;
+    font-size: 40px;
+    /* Ajusta el tamaño del título para pantallas más pequeñas */
   }
-  
-  /* Estilo para los mensajes de error */
-  .error-message {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
-  }
-  
-  .circle {
-    margin: 20px auto; /* Centra el círculo horizontalmente y añade espacio arriba */
-    width: 150px; /* Ancho del círculo */
-    height: 150px; /* Altura del círculo */
-    background-color: #ffffff; /* Color de fondo del círculo */
-    border-radius: 50%; /* Hace que el elemento sea un círculo */
-    position: absolute; /* Colocación absoluta para superponer */
-    top: 17%; /* Centra verticalmente el círculo en el medio de la pantalla */
-    left: 50%; /* Centra el círculo horizontalmente */
-    transform: translate(-50%, -50%); /* Centra horizontal y verticalmente el círculo */
-    z-index: 1; /* Asegura que esté por encima del contenido */
-    border: 2px solid white; /* Borde blanco de 2 píxeles */
-  }
-  
-  .circle-inner {
-    width: 100%; /* Ancho completo del círculo interno */
-    height: 100%; /* Altura completa del círculo interno */
-    overflow: hidden; /* Oculta el contenido que se desborde del círculo */
-    border-radius: 50%; /* Asegura que el contenido siga siendo circular */
-  }
-  
-  ion-img {
-    border-radius: 50%; /* Hace que el elemento sea un círculo */
-    width: 100%; /* Asegura que la imagen ocupe todo el espacio disponible */
-    height: 100%; /* Asegura que la imagen ocupe todo el espacio disponible */
-    object-fit: cover; /* Ajusta la imagen para que se ajuste al círculo sin deformación */
-  }
-  
-  
-  /* Ajustes para dispositivos específicos */
-  @media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px) {
-    ion-card-title {
-      font-size: 30px;
-      /* Ajusta el tamaño del título para pantallas más pequeñas */
-    }
-  
-    .ion-title {
-      font-size: 40px;
-      /* Ajusta el tamaño del título para pantallas más pequeñas */
-    }
-  }
-  //esto es del toolbar:
-  //COSA DEL CARRITO::after
-  :host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section+.demo-section {
-    margin-top: 16px;
-  }
-  
-  .demo-section {
-    margin-right: 20px;
-    /* Agrega margen al lado derecho del primer elemento */
-    display: flex;
-    /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center;
-    /* Centra verticalmente los elementos */
-  }
-  
-  //BUSQUEDA:
-  /* Estilos para el contenedor que contiene el ion-searchbar */
-  .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    --ion-background-color: #0D0D0D;
-  }
-  
-  ion-searchbar {
-    color: white;
-    width: 400px;
-    text-align: left;
-  }
-  
-  ion-toolbar {
-    --background: #79F2E6;
-  }
-  
-  .no-product-message {
-    text-align: center;
-    color: red;
-    font-weight: bold;
-    margin-top: 2px;
-    font-size: 35px;
-  }
+}
