--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -2,15 +2,16 @@
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
-      <ion-icon style="width: 35px; height: 35px; color: #0D0D0D;" name="cart-outline" [routerLink]="['/carrito']"></ion-icon>
+      <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
+        [routerLink]="['/carrito']"></ion-icon>
     </div>
-    
-  
+
+
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
-      <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
+      <ion-menu-button style="color: #050025;;"></ion-menu-button>
     </ion-buttons>
-  
+
     <!-- EL BUSCADOR -->
     <div class="search-container">
       <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="searchProducts()"></ion-searchbar>
@@ -20,20 +21,12 @@
 
 <ion-content [fullscreen]="true">
   <!-- Vista del ADMIN -->
-  <ion-grid class="ion-grid" *ngIf="rol == 2">
-    <ion-row>
-      <ion-card>
-        <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
-        <ion-row>
-          <ion-button class="center-buttons"  [routerLink]="['/lista-usuario']">Ver usuarios</ion-button>
-        </ion-row>
-      </ion-card>
-    </ion-row>
-  </ion-grid>
+  <ion-card-title *ngIf="rol == 2" style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
+  <ion-button *ngIf="rol == 2" class="center-buttons" [routerLink]="['/lista-usuario']">Ver usuarios</ion-button>
+
   <!-- Vista del USUARIO -->
   <ion-grid>
     <ion-card-title>TimeTech Audible</ion-card-title>
-    
     <br>
     <!-- Mostrar mensaje de error si no se encuentran productos -->
     <div *ngIf="noProductFound()" class="no-product-message">No existe ese producto</div>
@@ -46,16 +39,15 @@
           <ion-card-title class="ion-title">{{ producto.nombreProducto }}</ion-card-title>
           <ion-card-content>
             <td>{{ producto.precio | currency:'$':true:'4.0-0' }}</td>
-            <ion-button class="center-buttons" *ngIf="rol === 1" (click)="detalle(producto)">Detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol === 2" (click)="modificar(producto)">Modificar</ion-button>
-            <ion-button class="borrar" *ngIf="rol === 2" (click)="eliminar(producto)" >Eliminar</ion-button>
-            <ion-button *ngIf="rol === 1"  (click)="agregarAlCarrito(producto)">Agregar</ion-button>
+            <ion-button class="otro" *ngIf="rol === 1" (click)="detalle(producto)">Detalles</ion-button>
+            <ion-button *ngIf="rol === 2" (click)="modificar(producto)">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol === 2" (click)="eliminar(producto)">Eliminar</ion-button>
+            <ion-button class="otro2" *ngIf="rol === 1" (click)="agregarAlCarrito(producto)">Agregar</ion-button>
           </ion-card-content>
         </ion-card-header>
-      </ion-card>      
+      </ion-card>
     </ion-row>
   </ion-grid>
   <br><br><br>
   <app-componente2></app-componente2>
 </ion-content>
-
