--- a/src/app/pages/Shop/tienda/tienda.page.scss
+++ b/src/app/pages/Shop/tienda/tienda.page.scss
@@ -6,23 +6,10 @@ ion-img {
 
 /* Estilos generales para las tarjetas */
 ion-card {
-    box-shadow: 6px 2px 6px #79F2E6;
-    background-color: #010626;
+    background-color: #050025;
     width: max-content;
     height: max-content;
-}
-
-/* Estilos para las tarjetas del administrador */
-.ion-grid ion-row {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-
-.ion-grid ion-card {
-    margin: 1px;
-    max-width: 300px; /* Ajusta el ancho de las tarjetas del administrador */
-    max-height: 220px;
+    border: 3px solid #050025;
 }
 
 /* Estilos para las tarjetas de productos */
@@ -34,7 +21,8 @@ ion-grid ion-row {
 
 ion-grid ion-card {
     margin: 10px;
-    max-width: 350px; /* Ajusta el ancho de las tarjetas de productos */
+    max-width: 350px;
+    /* Ajusta el ancho de las tarjetas de productos */
 }
 
 ion-img.img-container {
@@ -43,50 +31,62 @@ ion-img.img-container {
 }
 
 /* Estilos para los títulos y textos */
-@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 
 ion-card-content {
     margin: auto;
 }
+.otro{
+    --background: #7CC9CF;
+}
+.otro2{
+    --background: #3D2652;
+}
 
 ion-card-title {
-    border-color: #532473;
-    color: white;
+    color: black;
     font-size: 35px;
     margin: 2px;
+    margin-top: 5px;
     text-align: center;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'Montserrat';
+}
+
+.center-buttons {
+    margin-left: 130px;
 }
 
 .ion-title {
     color: white;
-    font-family: 'DM Serif Display', serif;
     font-size: 25px;
     text-align: left;
     margin: 3px;
+    font-family: 'Montserrat';
 }
 
 /* Estilos para el fondo */
 ion-content {
-    --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
+    --background: white;
 }
 
 /* Estilos para las pipes (tabla) */
 td {
+    margin-left: 50px;
     align-items: center;
     text-align: center;
     color: white;
     font-size: 30px;
-}
-//botones:
-ion-button{
-    --background: #7630D9;
-}
-.borrar{
-    --background: red;
+    font-family: 'Montserrat';
 }
 
+//botones:
+ion-button {
+    --background: #0C909C;
+}
+
+.borrar {
+    --background: red;
+}
 
 //esto es del toolbar:
 //COSA DEL CARRITO::after
@@ -94,45 +94,45 @@ ion-button{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-  }
-  
-  .demo-section+.demo-section {
+}
+
+.demo-section+.demo-section {
     margin-top: 16px;
-  }
-  
-  .demo-section {
+}
+
+.demo-section {
     margin-right: 20px;
     /* Agrega margen al lado derecho del primer elemento */
     display: flex;
     /* Utiliza flexbox para alinear verticalmente los elementos */
     align-items: center;
     /* Centra verticalmente los elementos */
-  }
-  
-  
-  //BUSQUEDA:
-  /* Estilos para el contenedor que contiene el ion-searchbar */
-  .search-container {
+}
+
+
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    --ion-background-color: #0D0D0D;
-  }
-  
-  ion-searchbar {
-    color: white;
+    --ion-background-color: #050025;
+}
+
+ion-searchbar {
+    color: #ffffff;
     width: 400px;
     text-align: left;
-  }
-  
-  ion-toolbar {
-    --background: #79F2E6;
-  }
+}
 
-  .no-product-message {
+ion-toolbar {
+    --background: #ffffff;
+}
+
+.no-product-message {
     text-align: center;
     color: red;
     font-weight: bold;
     margin-top: 2px;
     font-size: 35px;
-  }
+}
