--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -2,20 +2,17 @@
   <ion-toolbar>
     <!-- LOGO DEL CARRITO -->
     <div class="demo-section" slot="end">
-      <mat-icon [matBadge]="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-        <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;"
-          name="cart-outline"></ion-icon>
-      </mat-icon>
+      <ion-icon style="width: 35px; height: 35px; color: #050025;" name="cart-outline"
+        [routerLink]="['/carrito']"></ion-icon>
     </div>
-
     <!-- MENÚ DE BÚSQUEDA -->
     <ion-buttons slot="start">
-      <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
+      <ion-menu-button style="color: #050025;;"></ion-menu-button>
     </ion-buttons>
 
     <!-- EL BUSCADOR -->
     <div class="search-container">
-      <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchProducts()"></ion-searchbar>
+      <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="searchProducts()"></ion-searchbar>
     </div>
   </ion-toolbar>
 </ion-header>
@@ -23,14 +20,15 @@
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
-      <img [src]="imagenPValue" alt="" class="card-image">
+      <img [src]="imagenPValue" class="card-image">
       <ion-card-content class="card-content">
         <ion-card-title class="titulo">{{ nombrePValue }}</ion-card-title>
-        <p class="subti" style="font-size: 25px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}</p>
+        <p class="subti" style="font-size: 25px; margin: 5px;">Precio: {{ precioPValue | currency:'$':true:'4.0-0' }}</p>
         <p class="subti">Descripción:</p>
         <p>{{ descripcionPValue }}</p>
         <!-- En tu plantilla HTML -->
         <ion-button *ngIf="idRol === 1" (click)="agregarAlCarrito()">Agregar al carrito</ion-button>
+        <ion-button *ngIf="idRol === 2" (click)="agregarAlCarrito()">Modificar</ion-button>
       </ion-card-content>
     </ion-card>
     <br><br><br>
