--- a/src/app/pages/productos/ag3/ag3.page.scss
+++ b/src/app/pages/productos/ag3/ag3.page.scss
@@ -7,8 +7,8 @@
 }
 
 .custom-card {
-    box-shadow: 0px 2px 6px #69348b;
-    background: #010626;
+    border: 3px solid #050025;
+    background: #050025;
     display: flex;
     align-items: center;
     width: 95%;
@@ -27,11 +27,12 @@
     align-self: flex-start;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=DM+Serif+Display&family=Montserrat:wght@300&display=swap');
 p {
     color: white;
     font-size: 15px;
     text-align: left;
-    font-family: 'ADLaM Display';
+    font-family: 'Montserrat';
 }
 
 .subti {
@@ -42,21 +43,21 @@ p {
 
 .titulo {
     color: white;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'Montserrat';
     font-size: 25px;
     text-align: left;
     margin: 2px;
 }
 
 ion-button {
-    --background: #F079F2;
+    --background: #7CC9CF;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 ion-content {
-    --background: url(https://w0.peakpx.com/wallpaper/939/832/HD-wallpaper-deep-purple-blue-design-pink-premium.jpg);
+    --background: white;
 
 }
 
@@ -123,13 +124,6 @@ ion-content {
   }
   
   ion-toolbar {
-    --background: #79F2E6;
+    --background: white;
   }
 
-  .no-product-message {
-    text-align: center;
-    color: red;
-    font-weight: bold;
-    margin-top: 2px;
-    font-size: 35px;
-  }
